[package]
name = "rustedbytes-ebpf-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
rustedbytes-ebpf-common = { path = "../rustedbytes-ebpf-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "rustedbytes-ebpf"
path = "src/main.rs"
